<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HYRULE MONSTERS</string>
    <string name="error_retry">RETRY</string>

    <!-- hyrule feature -->
    <string name="monsters_title">@string/app_name</string>
    <string name="monsters_menu_settings">Settings</string>
    <string name="error_server_response">Error obtaining data from the server</string>
    <string name="monster_title" />
    <string name="description_monster_image">Monster image</string>
    <string name="tag_monster_image_loaded" translatable="false">Monster image loaded</string>
    <string name="tag_monster_image_url" translatable="false">Monster image url</string>

    <!-- settings feature -->
    <string name="settings">Settings</string>

    <string name="preferences_cache">Cache</string>
    <string name="preferences_cache_expiration">Cache expiration</string>
    <string name="preferences_cache_dont_use">Don\'t use cache</string>
    <string name="preferences_cache_one_minute">1 minute</string>
    <string name="preferences_cache_ten_minutes">10 minutes</string>
    <string name="preferences_cache_never">Never</string>
    <string-array name="preferences_cache_entries">
        <item>@string/preferences_cache_dont_use</item>
        <item>@string/preferences_cache_one_minute</item>
        <item>@string/preferences_cache_ten_minutes</item>
        <item>@string/preferences_cache_never</item>
    </string-array>

    <string name="preferences_cache_key" translatable="false">preferences_cache_key</string>
    <string-array name="preferences_cache_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>10</item>
        <item>999999999</item>
    </string-array>
    <string name="preferences_cache_default_value" translatable="false">1</string>
</resources>