...
            app:enterAnim="@anim/slide_in_from_right_to_left"
            app:exitAnim="@anim/slide_out_from_right_to_left"
            app:popEnterAnim="@anim/slide_in_from_left_to_right"
            app:popExitAnim="@anim/slide_out_from_left_to_right" />
        <action
            android:id="@+id/toSettings"
            app:destination="@id/settings_destination" />
    </fragment>

    <fragment
        android:id="@+id/monster_detail_destination"
        android:name="com.carles.simple.ui.hyrule.MonsterDetailFragment"
        android:label="@string/app_name"
...
